--- a/app/src/main/res/layout/fragment_add_new_drug_.xml
+++ b/app/src/main/res/layout/fragment_add_new_drug_.xml
@@ -155,7 +155,8 @@
                                     android:text="EGP"
                                     android:textColor="@color/main_color"
                                     android:textSize="15sp"
-                                    android:layout_centerInParent="true" />
+                                    android:layout_centerInParent="true"
+                                    android:visibility="gone"/>
                             </RelativeLayout>
                         </LinearLayout>
 
