--- a/app/src/main/res/layout/fragment_pharmacy__drug_screen_.xml
+++ b/app/src/main/res/layout/fragment_pharmacy__drug_screen_.xml
@@ -53,8 +53,9 @@
                         android:src="@drawable/ic_baseline_message_24"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true"
-                        android:visibility="@{isPharma? View.GONE : View.VISIBLE, default = gone}"
-                        />
+                        android:visibility="invisible"/>
+                        <!--android:visibility="@{isPharma? View.GONE : View.VISIBLE, default = gone}"-->
+
                 </RelativeLayout>
 
                 <LinearLayout
@@ -106,7 +107,8 @@
                             android:text="500 mg"
                             android:textSize="15sp"
                             android:textColor="@color/main_color"
-                            android:layout_weight="1" />
+                            android:layout_weight="1"
+                            android:visibility="invisible"/>
 
                         <TextView
                             android:id="@+id/drug_price"
